--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h1 class="name"> 은시기 </h1>
         <h2 class="sub"> Book & Basketball </h2>
         <a target="_blank" href="https://blog.naver.com/krno188">네이버 블로그</a>
-        <a target="_blank" href="https://drive.google.com/file/d/150axzj7EjW5vv6DgQarOSGfUR_kw3ysM/view/">포트폴리오</a>
+        <a target="_blank" href="https://drive.google.com/file/d/150axzj7EjW5vv6DgQarOSGfUR_kw3ysM/view?usp=sharing">포트폴리오</a>
         <a target="_blank" href="https://www.instagram.com/eunn.n">인스타그램</a>
         <a target="_blank" href="https://alkaline-seat-b1b.notion.site/32c5cb39ac234ca89dac7e140277dec7?v=8e1a971efbc84855924455dccba7f60b">노션</a>
     </div> 
